Horario e Forma de entrega adicionado

--- a/src/core/templates/widgets/footer.html
+++ b/src/core/templates/widgets/footer.html
@@ -1,6 +1,50 @@
 {% load i18n %}
-<div id="footer">
-    <b>
-        {% trans 'Projeto Base © 2017' %}
-    </b>
-</div>
+<footer id="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-6 col-sm-3">
+                <h6 class="text-uppercase">Information</h6>
+                <ul class="list-unstyled">
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Benefits</a></li>
+                    <li><a href="">Developers</a></li>
+                </ul>
+            </div>
+            <div class="col-xs-6 col-sm-3 column">
+                <h6 class="text-uppercase">About</h6>
+                <ul class="list-unstyled">
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Delivery Information</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms &amp; Conditions</a></li>
+                </ul>
+            </div>
+            <div class="col-xs-12 col-sm-3 column">
+                <h6 class="text-uppercase">Stay Posted</h6>
+                <form>
+                    <div class="form-group">
+                        <input class="form-control" title="No spam, we promise!" placeholder="Tell us your email"
+                               type="text">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary" data-toggle="modal" data-target="#alertModal" type="button">
+                            Subscribe for updates
+                        </button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-xs-12 col-sm-3 text-xs-right">
+                <h6 class="text-uppercase">Follow</h6>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a rel="nofollow" href="" title="Twitter"><i
+                            class="icon-lg ion-social-twitter-outline"></i></a>&nbsp;</li>
+                    <li class="list-inline-item"><a rel="nofollow" href="" title="Facebook"><i
+                            class="icon-lg ion-social-facebook-outline"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <br>
+        <span class="pull-right text-muted small"><a href="http://www.codeply.com">Made by Themes.guide</a> ©2015-2016 Company</span>
+    </div>
+</footer>
