--- a/src/core/static/css/footer.css
+++ b/src/core/static/css/footer.css
@@ -2,9 +2,25 @@
   *************  FOOTER  ************
 */
 #footer {
-    height: 80px;
-    background-color: var(--footer-bg);
-    padding-top: 10px;
-    color: #fff;
-    text-align: center;
+    /*height: 80px;*/
+    /*background-color: var(--footer-bg);*/
+    /*padding-top: 10px;*/
+    /*color: #fff;*/
+    /*text-align: center;*/
+    /*position: absolute;*/
+    /*bottom: 0;*/
+    /*width: 100%;*/
+    /*height: 60px;*/
+    /*line-height: 60px;*/
+    /*background-color: #f5f5f5;*/
+}
+
+footer {
+    padding: 45px;
+    padding-top: 40px;
+    background-color: #e0e0e3;
+}
+
+footer h4, footer h6 {
+    color:#fff;
 }
