--- a/src/core/static/css/main.css
+++ b/src/core/static/css/main.css
@@ -3,15 +3,17 @@
     Modelo de cor:
             -- componente - bg|text: cor
      */
-    --base-color:#3a9ade;
-    --base-dark-color: #276f9e;
-
-
-    --nav-bg: var(--base-color);
-    --footer-bg: #3a9ade;
+    --nav-bg: #0085C3;
+    --nav-bg-hover: #0085C3;
+    --nav-text-color: #fff;
+    --footer-bg: #0275D8;
     --body-bg: #ededed;
     --card-basic-bg: #fff;
+    --card-basic-text: #000a07;
     --botao-bg-grande: #3a9ade;
+    --botao-bg-grande-hover: #319fee;
+    --hr-titulo-color: #fff;
+    --card-header-bg: #f8f8f8;
 }
 html,
 body {
@@ -39,10 +41,12 @@ body {
     width: 32px;
     height: 22px;
     border: none;
-    margin-left: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    /*margin-left: 5px;*/
     float: right;
-    position: relative;
-    bottom: 10px;
+    /*position: relative;*/
+    /*bottom: 10px;*/
 
 }
 .flags {
@@ -55,9 +59,21 @@ body {
   *************  Widgets  ************
 */
 /*Cards*/
+.hr-titulo {
+    border-top: 2px solid var(--hr-titulo-color)!important;
+    width: 100%;
+    max-width: 100% !important;
+}
+.card-header {
+    border-bottom: 0px !important;
+    background-color: var(--card-header-bg)!important;
+}
+.card-form {
+}
 
 .card-basic {
     background-color: var(--card-basic-bg);
+    color: var(--card-basic-text);
     padding: 15px 20px 10px 20px;
     border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -76,6 +92,9 @@ body {
     -moz-box-shadow: 0 2px 2px rgba(116,116,116,0.25);
     box-shadow: 0 2px 2px rgba(116,116,116,0.25);
 }
+.single-section {
+    min-height: 55%;
+}
 /* Button*/
 .btn-grande  {
     color: #fff !important;
@@ -91,9 +110,85 @@ body {
     -moz-box-shadow: 0 2px 2px rgba(116,116,116,0.25);
     box-shadow: 0 2px 2px rgba(116,116,116,0.25);
 }
+.btn-grande:hover {
+        background-color: var(--botao-bg-grande-hover);
+
+}
 /* Form */
 .footer-form {
     text-align: center;
 }
+
 /* */
 /* Final Widgets */
+
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    font-family: 'Montserrat','Helvetica Neue',Arial,sans-serif;
+    color: #001A33;
+    webkit-tap-highlight-color: #222;
+    top:0;
+}
+a {
+    color: #007FFF;
+    -webkit-transition: all .35s;
+    -moz-transition: all .35s;
+    transition: all .35s;
+}
+p {
+    font-size: 17px;
+    line-height: 1.7;
+    margin-bottom: 20px;
+    font-family:'Helvetica Neue',Arial,sans-serif;
+}
+
+.text-normal {
+    font-family:'Helvetica Neue',Arial,sans-serif;
+}
+
+.wide-space {
+    letter-spacing: 1.6px;
+}
+
+.icon-lg {
+    font-size: 50px;
+    line-height: 18px;
+}
+
+.bg-primary {
+    background-color: #007FFF;
+}
+
+.bg-alt {
+    background-color: #fff;
+}
+
+.text-faded {
+    color: rgba(245,245,245,0.7);
+}
+
+.text-dark {
+    color: #001A33!important;
+}
+
+.text-light {
+    color: #fff !important;
+}
+
+.text-light:hover,.text-light:focus {
+    color: #eee;
+    text-decoration:none;
+}
+.text-primary {
+    color: #1f1d1d;
+}
+.section-single {
+    margin-top: 120px;
+    margin-bottom: 30px;
+}
