--- a/src/core/static/css/nav.css
+++ b/src/core/static/css/nav.css
@@ -1,7 +1,7 @@
 .space-nav-fixed {
-    margin-top: 50px;
+    margin-top: 100px;
 }
-/*logo central*/
+/*!*logo central*!*/
 .logo-warper {
     background-color: transparent;
     border-radius: 0% 0% 300% 300%;
@@ -13,35 +13,43 @@
     top: 0px;
     left: 0;
     right: 0;
+    z-index: 99999;
 
 }
 .logo-warper img {
     height: 86px;
 }
-.navbar-fixed-top {
+.dropdown-menu-navbar-right {
+    min-width: 7rem !important;
+    /*background-color: var(--nav-bg) !important;*/
+}
+.dropdown-item-nav:hover {
     background-color: var(--nav-bg) !important;
 }
-.navbar-default {
-    /*background-color: transparent;*/
-    height: 50px;
+.language-row {
+    position: fixed !important;
+    top: 55px;
+    z-index: 9999;
 }
-.navbar-collapse.in {
-    background-color: #fff;
-    padding-top: 35px;
+.nav-logo {
+    height: 100%!important;
 }
+.navbar-brand {
+    padding-top: 0px !important;
+
+}
+/*.navbar-fixed-top {*/
+    /*background-color: var(--nav-bg) !important;*/
+/*}*/
+/*.navbar-default {*/
+    /*!*background-color: transparent;*!*/
+    /*height: 50px;*/
+/*}*/
+/*.navbar-collapse.in {*/
+    /*background-color: #fff;*/
+    /*padding-top: 35px;*/
+/*}*/
 .links {
-    /*color: var(--branco) !important;*/
-    color: #fff !important;
-    font-weight: 900;
     margin-right: 10px;
-}
-.open>a {
-    background-color:  var(--base-dark-color) !important;
-    border: 0;
-}
-.links:hover {
-    background-color:  var(--base-dark-color) !important;
-}
-.menu-user {
-    background-color: var(--nav-bg) !important;
+    margin-left: 10px;
 }
