--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -15,10 +15,10 @@
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
 
     {#        <link href='http://fonts.googleapis.com/css?family=Economica:400,700' rel='stylesheet' type='text/css'>#}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/nav.css' %}">
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 
     <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -27,18 +27,13 @@
 </head>
 
 <body>
-<div id="wrap">
-    <div class="container-fuild">
-        <div id="fb-root"></div>
-        {% block  navbar %}
-            {% include 'widgets/nav.html' %}
-        {% endblock %}
-        {% bootstrap_messages %}
-        {% block content %}{% endblock %}
-    </div>
-</div>
+{% block  navbar %}
+    {% include 'widgets/nav.html' %}
+{% endblock %}
+{% bootstrap_messages %}
+{% block content %}{% endblock %}
 {% block footer %}
-    {% include 'widgets/footer.html' %}
+        {% include 'widgets/footer.html' %}
 {% endblock %}
 {% block script %}{% endblock %}
 
