--- a/src/core/templates/core/index.html
+++ b/src/core/templates/core/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="container">
-        <h1>Bem vindo </h1>
-    </div>
+    Base
+{% endblock %}
+{% block script %}
 {% endblock %}
