Adicionando pedido views e factory nos tests

--- a/src/core/templates/widgets/form.html
+++ b/src/core/templates/widgets/form.html
@@ -5,6 +5,9 @@
         button_text = Texto do botar para submeter form
     Blocks
         footer_form = Bloco para implementar algum footer na card
+
+    Usage:
+
 {% endcomment %}
 {% load i18n %}
 {% load bootstrap3 %}
