set_horario agora gerencia setar a hora de acordo com a timezone

--- a/src/pedidos/templates/pedidos/pedido_list.html
+++ b/src/pedidos/templates/pedidos/pedido_list.html
@@ -39,7 +39,7 @@
                         </td>
                         <td>{{ object.valor_total }}</td>
                         <td>
-                            <a href=""></a>
+                            <a href="{{ object.get_absolute_url }}">Editar</a>
                         </td>
                     </tr>
                 {% endfor %}
