--- a/src/core/static/css/main.css
+++ b/src/core/static/css/main.css
@@ -111,7 +111,7 @@ body {
     box-shadow: 0 2px 2px rgba(116,116,116,0.25);
 }
 .btn-grande:hover {
-        background-color: var(--botao-bg-grande-hover);
+    background-color: var(--botao-bg-grande-hover);
 
 }
 /* Form */
@@ -191,4 +191,8 @@ p {
 .section-single {
     margin-top: 120px;
     margin-bottom: 30px;
+}
+/*Pedido*/
+.pedido-list-tbody > tr > td {
+    vertical-align: middle!important;
 }
