--- a/src/core/static/css/main.css
+++ b/src/core/static/css/main.css
@@ -58,6 +58,15 @@ body {
 /*
   *************  Widgets  ************
 */
+/*alerts*/
+.alert-fixed {
+    position:fixed;
+    top: 60px;
+    left: 0px;
+    width: 100%;
+    z-index:9999;
+    border-radius:0px
+}
 /*Cards*/
 .hr-titulo {
     border-top: 2px solid var(--hr-titulo-color)!important;
