--- a/src/core/templates/widgets/nav.html
+++ b/src/core/templates/widgets/nav.html
@@ -37,19 +37,19 @@
         </ul>
     </div><!-- /.navbar-collapse -->
 </nav>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-2 col-sm-offset-10 language-row">
-
-            <form action="{% url 'set_language' %}" method="post">
-                {% csrf_token %}
-                <input name="next" type="hidden" value="{{ request.get_full_path }}" />
-                <input name="language" type="hidden" value="pt" />
-                <input  style="background: url({% static 'img/brasil-flag.png' %}); background-size: 32px 22px" class="input-flag" type="submit" value="" />
-            </form>
-        </div>
-    </div>
-</div>
+{#<div class="container-fluid">#}
+{#    <div class="row">#}
+{#        <div class="col-sm-2 col-sm-offset-10 language-row">#}
+{##}
+{#            <form action="{% url 'set_language' %}" method="post">#}
+{#                {% csrf_token %}#}
+{#                <input name="next" type="hidden" value="{{ request.get_full_path }}" />#}
+{#                <input name="language" type="hidden" value="pt" />#}
+{#                <input  style="background: url({% static 'img/brasil-flag.png' %}); background-size: 32px 22px" class="input-flag" type="submit" value="" />#}
+{#            </form>#}
+{#        </div>#}
+{#    </div>#}
+{#</div>#}
 <div class="space-nav-fixed"></div>
 {#        {% get_current_language as LANGUAGE_CODE %}#}
 {#        {{ LANGUAGE_CODE }}#}
