Adicionado modal para criar pedido via web

--- a/src/core/static/css/main.css
+++ b/src/core/static/css/main.css
@@ -105,6 +105,10 @@ body {
     min-height: 55%;
 }
 /* Button*/
+.btn-create-pedido {
+    /*position: absolute;*/
+    margin-bottom: 20px;
+}
 .btn-grande  {
     color: #fff !important;
     font-weight: 900;
