Produtos no pedido

--- a/src/pedidos/templates/pedidos/pedido_create_modal.html
+++ b/src/pedidos/templates/pedidos/pedido_create_modal.html
@@ -9,7 +9,9 @@
         </div>
         <div class="modal-body">
             {% csrf_token %}
+            {% bootstrap_formset formset %}
             {% bootstrap_form form %}
+
         </div>
         <div class="modal-footer">
             <input class="btn btn-primary" type="submit" value="Save" />
